# testing-goat

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  justfile  pyproject.toml  requirements.dev.in  requirements.dev.txt  requirements.prod.in  requirements.prod.txt  requirements.txt
.github/workflows/: main.yml  setup.yml
functional_tests/: tests.py
infra/: deploy-playbook.yaml  env.j2
lists/: tests.py  urls.py  views.py
lists/migrations/: 0002_item_text.py
lists/templates/: base.html  home.html
src/accounts/: authentication.py  models.py  urls.py  views.py
src/accounts/migrations/: 0001_initial.py  0002_listuser.py  0002_token.py  0003_user_shared_lists.py
src/accounts/tests/: test_authentication.py  test_models.py  test_views.py
src/functional_tests/: base.py  container_commands.py  list_page.py  my_lists_page.py  test_layout_and_styling.py  test_list_item_validation.py  test_login.py  test_my_lists.py  test_sharing.py  test_simple_list_creation.py
src/lists/: api.py  api_urls.py  forms.py  models.py  tests.py  urls.py  views.py
src/lists/migrations/: 0001_initial.py  0003_list.py  0004_item_list.py  0005_alter_item_unique_together.py  0006_alter_item_options.py  0007_list_owner.py
src/lists/static/tests/: Spec.js
src/lists/templates/: base.html  form.html  home.html  list.html  my_lists.html  scripts.html
src/lists/tests/: test_api.py  test_forms.py  test_models.py  test_views.py
src/superlists/: settings.py  urls.py  wsgi.py
superlists/: asgi.py  settings.py  urls.py
tests/: functional_tests.py
(+2 files in other folders)
